decksite/static/css/pd.css
/* http://meyerweb.com/eric/tools/css/reset/
     v2.0 | 20110126
     License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* Our CSS, using Golden Ratio from http://type-scale.com/ */

body {
    background: #f9f9f9;
    color: #502828;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 0.9em;
    line-height: 1.618;
    margin: 0 12.5% 10rem 12.5%;
}

b {
    font-weight: bold;
}

p {
    margin: 0.5rem 0;
}

.resource {
    width: 10em;
}

/* Layout */

div:after {
  content: "";
  display: table;
  clear: both;
}

section {
    border-top: 0.1rem #502828 solid;
    float: left;
    margin: 1rem 4.236rem 1rem 0;
}

/* Headings */

h1, h2, h3 {
    font-family: Georgia, "Times New Roman", Times, serif;
    line-height: 1.2;
    padding-top: 1rem;
    margin-bottom: 1.618rem;
}

h1 {
    font-size: 2.618rem;
}

h1 a:visited, h2 a:visited, h3 a:visited {
    color: #502828;
}

h2 {
    font-size: 1.618rem;
}

h3 {
    font-size: 1.2rem;
}

/* Links */

a {
    color: #502828;
    text-decoration: none;
}

p a {
    /* Underline that respects descenders. */
    text-shadow: 0.1rem 0 0 #fff, -0.1rem 0 0 #fff;
    background-image: linear-gradient( to right, currentColor 0%, currentColor 100% );
    background-repeat: repeat-x;
    background-position: 0 96%;
    -webkit-background-size: 100% 0.1rem;
    background-size: 100% 0.1rem;

}

/* Lists */

ul {
    list-style: square;
}

ul.decklist {
    list-style: none;
}

/* Tables */

table {
    border-collapse: separate;
    border-spacing: 0.25rem 0;
}

table.with-marginalia {
    margin-left: -4.5rem;
    margin-right: 0.5rem;
}

table.fade-repeats {
    visibility: hidden;
}

th {
    cursor: pointer;
    font-size: 0.8rem;
    text-align: left;
    text-transform: uppercase;
}

td, th {
    max-width: 13rem;
    overflow: hidden;
    padding: 0 0.25rem;
    white-space: nowrap;
    text-overflow: ellipsis;
}

/* Allow the stars in the margin to show. */
td:first-child, th:first-child {
    overflow: visible;
}

td:first-child, th:first-child {
    margin-left: -0.25rem; /* remove border-spacing */
}

td:last-child, th:last-child {
    margin-right: -0.25rem; /* remove border-spacing */
}

td:first-child, td:last-child, th:first-child, th:last-child {
    margin: 0;
    padding: 0;
}

.main table a {
    text-shadow: none;
    background-image: none;
}

td.c {
    text-align: center;
}

td.n {
    text-align: right;
}

td.divider {
    border-right: 0.07rem #ccc solid;
}

th.legend {
    text-align: center;
}

.marginalia {
    text-align: right;
    width: 4rem;
}

.repeat:not(span), td .repeat {
    opacity: 0.8;
}

/* Menu */

ul.menu {
    list-style: none;
    margin-left: -2rem;
}

.menu li {
    float: left;
}

.menu a {
    color: #502828;
    display: block;
    font-size: 0.8rem;
    padding: 2rem;
    text-decoration: none;
    text-transform: uppercase;
}

.menu a:hover {
    color: red;
}

.menu:after {
  content: "";
  display: table;
  clear: both;
}

/* Mana horizontal bar. */

.mana:nth-child(1) {
    border-left: 0.1rem #999 solid;
}

.mana {
    display: inline-block;
    height: 1rem;
    vertical-align: middle;
    border-bottom: 0.1rem #999 solid;
    border-top: 0.1rem #999 solid;
    border-right: 0.1rem #999 solid;
}

.mana-W {
    background-color: #fffcda;
}

.mana-U {
    background-color: #ace2fa
}

.mana-B {
    background-color: #ccc2c0;
}

.mana-R {
    background-color: #f8aa92;
}

.mana-G {
    background-color: #9dd2af;
}

/* Responsive tables */

@media only screen and (max-width: 60rem) {
    table, thead, tbody, th, td, tr {
        display: block;
    }

    thead {
        display: none;
    }

    tr {
        border-bottom: 0.1rem solid #999;
        padding: 1rem 0;
    }

    td {
        padding-left: 0;
    }
}

/* Card */

.card-img {
    height: 22.25rem;
    width: 15.6rem;
    padding-top: 1rem;
}

.illegal::after {
    content: "﻿🚫";
    margin-left: 0.2em;
}

/* Forms */

form {
    margin: 2rem 0;
}

button, form, input, select, textarea {
    font-size: inherit;
}

button, input, select, textarea, .uploader-label {
    width: 20rem;
}

button, input, label, select, textarea {
    margin-top: 1rem;
}

input[type=number] {
    width: 2rem;
}

label {
    display: block;
    float: left;
    margin-right: 1rem;
    text-align: right;
    width: 10rem;
}

textarea {
    height: 10rem;
}

label {
    width: 10em;
    margin-right: 1em;
}

input, select, textarea {
    margin-left: 1em;
}

button {
    appearance: button;
    -moz-appearance: button;
    -webkit-appearance: button;
}

button, div.error, .uploader-label {
    margin-left: 12em;
}

div.error {
    color: red;
}

input.error, select.error, textarea.error {
    border: 0.1rem solid red;
}

.uploader {
    display: none;
}

.uploader-label {
    cursor: pointer;
    float: none;
    margin-top: 0;
    text-align: left;
}

